--- a/javascript_exercises.html
+++ b/javascript_exercises.html
@@ -186,6 +186,7 @@ console.log(extractedValues);
 
 
 //ex 11
+do a function here 
     var student={
         name:"David Rayy",
         class:"VI",
@@ -207,6 +208,7 @@ class Cylinder{
         return Volume.toFixed(4);
     }
 }
+remove this 
 const myCylinder = new Cylinder(10, 5);
 console.log(myCylinder.CalculateVolume());*/
 
@@ -239,7 +241,7 @@ setInterval(clockUpdate, 1000);
 function isLowerCase(str) {
     return str === str.toLowerCase();
 }
-
+remove this 
 
 const testString1 = "hello world";
 const testString2 = "Hello World";
@@ -259,6 +261,7 @@ const add=(a,b)=>{
         }
     });
 }
+remove this 
 add(10,4)
 .then(result=>console.log("the total is ",result))
 .catch(error=>console.log(error));
@@ -287,8 +290,10 @@ const totalPrice=(price*qty);
 console.log(`You purchased ${qty} unit of ${product} for ${totalPrice}` );
 
 //ex 4
+remove this : {
 const arr1 = [3, 1, 4, 5, 2];
 const arr2 = [5, 6, 7, 1, 8];
+} and do a function here 
 
 const combinedArr = [...new Set([...arr1, ...arr2])].sort((a, b) => a - b);
 
@@ -301,6 +306,7 @@ console.log(`Make: ${make} Model: ${model} Year: ${year}` );
 
 
 //ex 6
+do a function here and use for it one methods of js 
 class Cycle{
     constructor(radius){
         this.radius=radius;
@@ -328,11 +334,12 @@ console.log("The area of your circle is",myCycle.CalculateArea());
 console.log(average(10,30,40));
 
 //ex 8
-const word=["react","angular","javascript","vue"];
+remove this : const word=["react","angular","javascript","vue"];
 const reverseString=word.map(word=>word.split('').reverse().join(''));
-console.log(`the reversed word is: ${reverseString}`);
+remove this : console.log(`the reversed word is: ${reverseString}`);
 
 //ex 9
+remove this : {
 const books = [
     { title: "Book One", pages: 250 },
     { title: "Book Two", pages: 400 },
@@ -340,10 +347,10 @@ const books = [
     { title: "Book Four", pages: 150 },
     { title: "Book Five", pages: 500 }
 ];
-
+}
 const booksMoreThan300Pages = books.filter(book => book.pages > 300);
 
-console.log(booksMoreThan300Pages);
+and this { console.log(booksMoreThan300Pages);}
 
 //ex 10
 const fetchData=()=>{
@@ -356,7 +363,7 @@ const fetchData=()=>{
 }
 
 
-fetchData().then(result => console.log(result)); 
+remove this : fetchData().then(result => console.log(result)); 
     
 
 
